--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,8 @@
 CC=clang
 CXX=clang++
-CXX1XFLAGS=-I../src -std=c++11 -g -O3 -march=native -fno-vectorize -mno-avx -mno-avx2 -mpopcnt -Rpass=loop-vectorize
-LDFLAGS=-g -Wl -O3
+CXX1XFLAGS=-I../src -std=c++11 -O3 -march=native -mpopcnt -Rpass=loop-vectorize
+# CXX1XFLAGS=-I../src -std=c++11 -g -O3 -march=native -fno-vectorize -mno-avx -mno-avx2 -mpopcnt -Rpass=loop-vectorize
+LDFLAGS=-Wl -O3
 
 # CC=gcc
 # CXX=g++
