--- a/test/Makefile
+++ b/test/Makefile
@@ -16,7 +16,7 @@ LDLIBS= -pthread
 
 # -Rpass=loop-vectorize -Rpass-missed=loop-vectorize -Rpass-analysis=loop-vectorize
 
-SRCS=harness.cpp test.cpp $(wildcard ../src/method*.cpp) $(wildcard ../src/join_*.cpp)
+SRCS=harness.cpp test.cpp ../src/join_base.cpp
 OBJS=$(subst .cpp,.o,$(SRCS))
 
 all: bench
