--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 CC=clang
 CXX=clang++
-CXX1XFLAGS=-I../src -std=c++11 -O3 -march=native -mpopcnt -mno-avx2 -mno-avx
-# CXX1XFLAGS=-I../src -std=c++11 -O3 -march=native -mpopcnt -Rpass=loop-vectorize
+CXX1XFLAGS=-I../src -std=c++11 -O3 -march=native -mpopcnt -mno-avx2 -mno-avx -mno-sse4 -DCOMPILE_CPU
+# CXX1XFLAGS=-I../src -std=c++11 -O3 -march=native -mpopcnt -Rpass=loop-vectorize -DCOMPILE_CPU
 # CXX1XFLAGS=-I../src -std=c++11 -g -O3 -march=native -fno-vectorize -mno-avx -mno-avx2 -mpopcnt -Rpass=loop-vectorize
 LDFLAGS=-Wl -O3
 
