--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,27 @@
 Package: geneticsCRE
 Type: Package
-Title: geneticsCRE computes a statistic on causal graphs to identify rare
-       and significant pathways.
+Title:  geneticsCRE is an R package that performs pathway-based genome-wide association study (PGWAS) to
+        identify statistically significant associations between variants on a gene regulatory pathways 
+        and a given phenotype
 Version: 0.1.0
-Author: Carl Tony Fakhry
+Author: Carl Tony Fakhry and Kourosh Zarringhalam
 Maintainer: Carl Tony Fakhry <cfakhry@cs.umb.edu>
-Description: geneticsCRE computes a statistic on causal graphs to identify rare
-       and significant pathways.
-License: Carl Tony Fakhry
+Description: geneticsCRE is an R package that performs pathway-based genome-wide association study (PGWAS) to
+             identify statistically significant associations between variants on a gene regulatory pathways 
+             and a given phenotype. Unlike Genome-wide association study (GWAS), that seeks to assign 
+             statistical significance to associations of variations in single genes to a  phenotype, PGWAS
+             accumulates statistical power by examining rare variant along gene-gene interaction pathways.
+             PGWAS  uses prior causal information a gene regulatory interactions to infer statistically 
+             significant associations between causal pathways and a the phenotype. Given phenotype data with
+             case/control information, geneticsCRE computes PGWAS for all valid pathways as identified by the
+             Homo Sapien STRINGdb causal network. Examples on usage are provided in the vignette.
+License: GPL (>=3)
 Depends:
-    R ,
+    R (>= 3.2.0),
     Rcpp ,
     plyr,
     Matrix,
-    dplyr
 LinkingTo: Rcpp
-SystemRequirements: GNU make
 LazyData: TRUE
 RoxygenNote: 6.0.1
+SystemRequirements: C++11
