Changed PGWAS keyword to GWASPA

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,27 @@
 Package: geneticsCRE
 Type: Package
-Title:  geneticsCRE is an R package that performs pathway-based genome-wide association study (PGWAS) to
+Title: geneticsCRE is an R package that performs genome-wide association study pathway analysis (GWASPA) to
         identify statistically significant associations between variants on a gene regulatory pathways 
         and a given phenotype
 Version: 0.1.0
 Author: Carl Tony Fakhry and Kourosh Zarringhalam
 Maintainer: Carl Tony Fakhry <cfakhry@cs.umb.edu>
-Description: geneticsCRE is an R package that performs pathway-based genome-wide association study (PGWAS) to
+Description: geneticsCRE is an R package that performs genome-wide association study pathway anaysis (GWASPA) to
              identify statistically significant associations between variants on a gene regulatory pathways 
              and a given phenotype. Unlike Genome-wide association study (GWAS), that seeks to assign 
-             statistical significance to associations of variations in single genes to a  phenotype, PGWAS
+             statistical significance to associations of variations in single genes to a  phenotype, GWASPA
              accumulates statistical power by examining rare variant along gene-gene interaction pathways.
-             PGWAS  uses prior causal information a gene regulatory interactions to infer statistically 
+             GWASPA  uses prior causal information a gene regulatory interactions to infer statistically 
              significant associations between causal pathways and a the phenotype. Given phenotype data with
-             case/control information, geneticsCRE computes PGWAS for all valid pathways as identified by the
+             case/control information, geneticsCRE computes GWASPA for all valid pathways as identified by the
              Homo Sapien STRINGdb causal network. Examples on usage are provided in the vignette.
 License: GPL (>=3)
 Depends:
     R (>= 3.2.0),
-    Rcpp ,
+    Rcpp,
     plyr,
     Matrix,
 LinkingTo: Rcpp
 LazyData: TRUE
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 SystemRequirements: C++11
